<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"  />
    <!-- android:text="Faça o seu Login:" -->

    <TextView
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txt_usuario" />
    <!-- android:text="Usuário:" -->

    <EditText
        android:id="@+id/campo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/msg_usuario" />
    <!-- android:text="Name"  -->
    <!-- android:hint="Informar o Nome do Usuário" -->

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txt_password" />
    <!-- android:text="Password:" -->

    <EditText
        android:id="@+id/campo_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/msg_password" />
    <!-- android:hint="Informar a Password do Usuário" -->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btnlogin" />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        app:srcCompat="@drawable/img_dinoazul" />
</LinearLayout>